# rwsd-python

./: .gitignore  README.md
bank_analyzer/: app.py  pyproject.toml
bank_analyzer/bank_analyzer/classes/: bank_statement_analyzer.py  bank_statement_processor.py  bank_transaction.py  notification.py  summary.py
bank_analyzer/bank_analyzer/exceptions/: csv.py
bank_analyzer/bank_analyzer/interfaces/: __init__.py  bank_statement.py  bank_transaction.py  exporter.py
bank_analyzer/tests/: __init__.py  conftest.py  test_bank_transaction.py  test_csv_parser.py  test_html_exporter.py  test_json_exporter.py  test_statement_processor.py  test_statement_validator.py
business_rule_engine/: app.py  pyproject.toml
business_rule_engine/actions/: __init__.py  forecast_amount.py  job_title_condition.py
business_rule_engine/business_rule_engine/: __init__.py  business_rule_engine.py
business_rule_engine/business_rule_engine/classes/: __init__.py  facts.py  inspector.py  report.py  rule.py  rule_builder.py
business_rule_engine/business_rule_engine/interfaces/: __init__.py  action.py  condition.py  conditional_action.py  rule.py  stage.py
business_rule_engine/conditions/Prospect/: __init__.py  job_title_condition.py
business_rule_engine/tests/: test_inspector.py  test_rule_engine.py
document_manager/: app.py  pyproject.toml
document_manager/document_manager/: attributes.py
document_manager/document_manager/classes/: __init__.py  document.py  query.py  system.py
document_manager/document_manager/exceptions/: __init__.py  file.py
document_manager/document_manager/interfaces/: importer.py
document_manager/resources/: invoice1.invoice  letter1.letter
document_manager/tests/: conftest.py  test_document.py  test_document_system.py  test_image_importer.py  test_invoice_importer.py  test_letter_importer.py  test_report_importer.py  test_text_file.py
twootr/: pyproject.toml  word_wrap_kata.py
twootr/tests/: conftest.py
twootr/tests/actions/: test_actions.py
twootr/tests/auth/: test_auth.py
twootr/tests/resources/: __init__.py  test_data.py
twootr/twootr/: twootr.py
twootr/twootr/classes/: __init__.py  key_generator.py  position.py  receiver_endpoint.py  sender_endpoint.py  (+3 more)
(+23 files in other folders)
