[tool.poetry]
name = "twootr"
version = "0.1.0"
description = "Real World Software Development Book's Exercise"
authors = ["Andres De Las Salas <andresdlassalas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
